--- a/tutorial-primary-secondary-sources.html
+++ b/tutorial-primary-secondary-sources.html
@@ -63,9 +63,11 @@
 					<p>
 					Some introductory text here.
 					</p>
-				<i class="fa fa-camera-retro fa-lg"></i>
-                <i class="fa fa-camera-retro fa-2x"></i>
-                <i class="fa fa-camera-retro fa-5x"></i>
+                <i class="fa fa-video-camera fa-5x"></i>
+                <span class="fa-stack fa-lg">
+  					<i class="fa fa-square-o fa-stack-6x"></i>
+  					<i class="fa fa-video-camera fa-stack-5x"></i>
+				</span>
 				</section>
 
 				<!-- Example of nested vertical slides -->
