missed close tag :-(

--- a/tutorial-primary-secondary-sources.html
+++ b/tutorial-primary-secondary-sources.html
@@ -73,6 +73,7 @@
 						A text definition / review
 						</blockquote>
 					</section>
+				</section>
 					
 					<section>
 						<h2>Example: Primary Articles in the Sciences</h2>
