--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<a href="tutorial-a-generic-tutorial.html">Generic Tutorial</a>
+					<a href="tutorial-primary-secondary-sources.html">Primary/Secondary</a>
+				</section>
 				<section data-markdown>
 					<script type="text/template">
 						## Markdown support
