--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/sky.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -25,7 +25,7 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<a href="tutorial-a-generic-tutorial.html">Generic Tutorial</a>
+					<a href="tutorial-a-generic-tutorial.html">Generic Tutorial</a> | 
 					<a href="tutorial-primary-secondary-sources.html">Primary/Secondary</a>
 				</section>
 				<section data-markdown>
