--- a/tutorial-a-generic-tutorial.html
+++ b/tutorial-a-generic-tutorial.html
@@ -47,8 +47,8 @@
 				
                 <!-- title slide -->
                 <section>
-                    <h1>Tutorial Title:</h1>
-					<h3>Subtitle</h3>
+                    <h3>Tutorial Title:</h3>
+					<h4>Subtitle</h4>
 					<p>
 						<i class="fa fa-arrows"></i><small><strong>Tip: </strong>You can use the arrow keys on your keyboard<br />
                             (or swipe on a touch-screen device) to navigate this tutorial.</small>
@@ -56,14 +56,14 @@
 				</section>
             <!-- question/reflection -->
                 <section>
-                    <h2>Question/Reflection/Scenario</h2>
+                    <h3>Question, Reflection, Scenario</h3>
                     <p><i class="fa fa-star"></i></p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua?</p>
                 </section>
                 
             <!-- concept, idea, definition, maybe w/ video? -->
 				<section>
-					<h2>Concept, idea, definition</h2>
+					<h3>Concept, idea, definition</h3>
 					<blockquote>Quick summary/quote.</blockquote>
 					<p><i class="fa fa-video-camera fa-5x"></i><br /><small>perhaps a video/animation?</small></p>
 				</section>
@@ -71,7 +71,7 @@
             <!-- Examples: nested vertical slides to provide examples -->
 				<section>
 					<section>
-						<h2>Examples - nested vertical slides.</h2>
+						<h3>Examples - nested vertical slides.</h3>
 						<blockquote>
 						Learners can get additional examples and support, or dive deeper into the topic....
 						</blockquote>
