--- a/tutorial-a-generic-tutorial.html
+++ b/tutorial-a-generic-tutorial.html
@@ -56,7 +56,7 @@
 				</section>
             <!-- question/reflection -->
                 <section>
-                    <h2>Question/Reflection/Scenario</h2>
+                    <h2>Question / Reflection / Scenario</h2>
                     <p><i class="fa fa-star"></i></p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua?</p>
                 </section>
@@ -92,7 +92,7 @@
             <!-- Review/Self-Quiz/Challenge/Action -->
                 
                 <section>
-                    <h2>Review/Self-Quiz/Challenge/Action?</h2>
+                    <h2>Review / Self-Quiz / Challenge?</h2>
                     <p><i class="fa fa-list-ul fa-5x"></i></p>
                     <p><i class="fa fa-question-circle-o fa-5x"></i></p>
                 </section>
