--- a/tutorial-a-generic-tutorial.html
+++ b/tutorial-a-generic-tutorial.html
@@ -56,7 +56,6 @@
 				</section>
             <!-- question/reflection -->
                 <section>
-                    <h2>Question / Reflection / Scenario</h2>
                     <h3>Question, Reflection, Scenario</h3>
                     <p><i class="fa fa-star"></i></p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua?</p>
@@ -90,10 +89,10 @@
 					</section>
 				</section>
 
-            <!-- Review/Self-Quiz/Challenge/Action -->
+            <!-- Review/Self-Check/Challenge/Action -->
                 
                 <section>
-                    <h2>Review / Self-Quiz / Challenge?</h2>
+                    <h2>Review / Self-check / Challenge?</h2>
                     <p><i class="fa fa-list-ul fa-5x"></i></p>
                     <p><i class="fa fa-question-circle-o fa-5x"></i></p>
                 </section>
