--- a/tutorial-a-generic-tutorial.html
+++ b/tutorial-a-generic-tutorial.html
@@ -50,7 +50,10 @@
                     <h3>Tutorial Title:</h3>
 					<h4>Subtitle</h4>
 					<p>
-						<i class="fa fa-arrows"></i><small><strong>Tip: </strong>You can use the arrow keys on your keyboard<br />
+						<i class="fa fa-arrows"></i><small><strong>
+					</p>
+					<p>
+					Tip: </strong>You can use the arrow keys on your keyboard<br />
                             (or swipe on a touch-screen device) to navigate this tutorial.</small>
 					</p>
 				</section>
