--- a/tutorial-a-generic-tutorial.html
+++ b/tutorial-a-generic-tutorial.html
@@ -50,9 +50,8 @@
                     <h3>Tutorial Title:</h3>
 					<h4>Subtitle</h4>
 					<p>
-						<i class="fa fa-arrows"></i><small><strong><br />
-					Tip: </strong>You can use the arrow keys on your keyboard<br />
-                            (or swipe on a touch-screen device) to navigate this tutorial.</small>
+						<i class="fa fa-arrows"></i><small><strong>Tip: </strong>You can use the arrow keys on your keyboard<br />
+                            (or swipe on a touch-screen device) to navigate this tutorial.</small><i class="fa fa-arrows"></i>
 					</p>
 				</section>
             <!-- question/reflection -->
