--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-					<a href="tutorial-a-generic-tutorial.html">Generic Tutorial</a> | 
-					<a href="tutorial-primary-secondary-sources.html">Primary/Secondary</a>
+					<a href="tutorial-a-generic-tutorial.html">Generic Tutorial</a> |
+					<a href="tutorial-primary-secondary-sources.html">Primary/Secondary</a> |
+                    <a href="tutorial-zotero-intro.html">Intro to Zotero Standalone</a>
 				</section>
 				<section data-markdown>
 					<script type="text/template">
