--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -64,8 +64,8 @@
                 </ul>
                 <p>It works with <i class="fa fa-book" title="books"></i>, <i class="fa fa-newspaper-o" title="articles"></i>, <i class="fa fa-film" title="media"></i>, <i class="fa fa-picture-o" title="photos"></i> and just about everything else!</p>
                     <hr />
-                    <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> to get started with Zotero.</p>
-                    <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> for a quick video tour of Zotero's features.</p>
+                    <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> Get started with Zotero.</p>
+                    <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> Watch a quick video tour of Zotero's features.</p>
                 </section>
                 <section>
                     <h3>Quick Video Tour</h3>
@@ -102,7 +102,7 @@
                         </ol>
                         <hr />
                         <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> Start saving your sources.</p>
-                        <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> Check out detailed video instructions for each step.</p>
+                        <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> Check out detailed <i class="fa fa-video-camera" title="video"></i> instructions for each step.</p>
                     </section>
                     <section>
                         <h3>
