--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -76,7 +76,7 @@
             <!-- concept, idea, definition, maybe w/ video? -->
 				<section>
                     <section>
-                        <h3>Standalone or Firefox?</h3>
+                        <h3>Zotero Standalone or Zotero in Firefox?</h3>
                         <p>You can use Zotero either as a stand-alone application, or as an extension within the Firefox browser.</p>
                         <p>This tutorial helps you get started with the Zotero stand-alone application. For help with the Firefox extension, see <a href="http://guides.library.ucla.edu/ld.php?content_id=6780040">this handout</a>.</p>
                         <hr />
@@ -93,7 +93,7 @@
                 </section>
                 <section>
                     <section>
-                        <h3>Set up Zotero Standalone</h3>
+                        <h3>Overview: Set up Zotero Standalone</h3>
                         <ol>
                             <li>Create your free Zotero account at <a href="https://www.zotero.org/user/register" target="_blank">https://www.zotero.org/user/register</a>.</li>
                             <li>Download and install Zotero Standalone at <a href="https://www.zotero.org/download/" target="_blank">https://www.zotero.org/download/</a>.</li>
@@ -102,7 +102,7 @@
                         </ol>
                         <hr />
                         <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> Start saving your sources.</p>
-                        <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> Check out detailed <i class="fa fa-video-camera" title="video"></i> instructions for each step.</p>
+                        <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> Check out detailed <i class="fa fa-video-camera" title="video"></i> instructions for each of the steps listed above.</p>
                     </section>
                     <section>
                         <h3>
