--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -88,7 +88,8 @@
                             <ul>
                                 <li>Use <strong>Zotero Standalone</strong> if Firefox is not your primary browser, or if you would like to use Zotero on its own outside of your browser window.</li>
                                 <li>Use <strong>Zotero for Firefox</strong> if you use Firefox as your primary browser, and you want to use Zotero inside of Firefox.</li>
-				
+                                <hr />
+                        <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> Get set up with Zotero Standalone</p>
                     </section>
                 </section>
                 <section>
