--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -56,7 +56,7 @@
                     <li>and generate a formatted bibliography in seconds.</li>
                 </ul>
                 <p>It works with <i class="fa fa-book" title="books"></i>, <i class="fa fa-file-text-o" title="articles"></i>, <i class="fa fa-newspaper-o" title="newspapers"></i>, <i class="fa fa-film" title="media"></i>, <i class="fa fa-picture-o" title="photos"></i> and just about everything else!</p>
-                <p>To navigate this tutorial, use the arrow keys on your keyboard, click the arrows on the screen, or swipe if you are using a tablet. Note that on some slides (like this one) you can navigate down <a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> for more detailed information before moving on to the next slide.
+                <p style="font-size: 12em;">To navigate this tutorial, use the arrow keys on your keyboard, click the arrows on the screen, or swipe if you are using a tablet. Note that on some slides (like this one) you can navigate down <a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> for more detailed information before moving on to the next slide.
                     <hr />
                     <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> Get started with Zotero.</p>
                     <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> Watch a quick video tour of Zotero's features.</p>
