--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -74,7 +74,7 @@
                         <p>You can use Zotero either as a stand-alone application, or as an extension within the Firefox browser.</p>
                         <p>This tutorial helps you get started with the Zotero stand-alone application. For help with the Firefox extension, see <a href="http://guides.library.ucla.edu/ld.php?content_id=6780040">this handout</a>.</p>
                         <hr />
-                        <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> Get set up with Zotero Standalone</p>
+                        <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> Continue to get set up with Zotero Standalone</p>
                         <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> How do I choose?</p>
                     </section>
                     <section>
