--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -62,8 +62,11 @@
                     <p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> Watch a quick video tour of Zotero's features.</p>
                 </section>
                 <section>
-                    <h3>Quick Video Tour</h3>
+                    <h3>Quick Video Tour of Zotero's key Features</h3>
                     <iframe width="640" height="360" src="https://www.youtube.com/embed/KK9J3ibHyRI" frameborder="0" allowfullscreen></iframe>
+		    <hr />
+                    <p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> Get started with Zotero.</p>
+                    
                 </section>
             </section>
             
