--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -108,7 +108,7 @@
 															
                     </section>
                
-                <section><section id= "zotero-standalone">
+                <section id= "zotero-standalone">
                         <h3>Overview: Set up Zotero Standalone</h3>
                         <ol>
                             <li>Create your free Zotero account <a href="https://www.zotero.org/user/register" target="_blank">here</a>.</li>
