--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -67,13 +67,13 @@
 			<h3>Navigating this Tutorial</h3>
 			<p> This is no average slideshow. Here are some tips on symbols you'll be encountering: 
 				<ul>
-					<li> <i class="fa fa-arrow-circle-down" title="down"> means you can get more in depth information about a topic,</li>
-					<li> <i class="fa fa-arrow-circle-right" title="right"> takes you to the next step in the tutorial, </li>
-					<li> <i class="fa fa-fast-forward" title="fast-forward"> allows you to skip forward to the information you need. </li>
+					<li> <i class="fa fa-arrow-circle-down" title="down"></i> means you can get more in depth information about a topic,</li>
+					<li> <i class="fa fa-arrow-circle-right" title="right"></i> takes you to the next step in the tutorial, </li>
+					<li> <i class="fa fa-fast-forward" title="fast-forward"></i> allows you to skip forward to the information you need. </li>
 			</ul>
 			
 			<hr />
-			<p> <a href="#" class="navigate-right"><i class="fa fa-cirlce-arrow-right" title="right"></a> Sounds good! Take me to the tutorial. </p>
+			<p> <a href="#" class="navigate-right"><i class="fa fa-cirlce-arrow-right" title="right"></i></a> Sounds good! Take me to the tutorial. </p>
 						</section>
 				
        <!-- top level slide three: choosing your starting point -->
