--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -67,9 +67,9 @@
 			<h3>Navigating this Tutorial</h3>
 			<p> This is no average slideshow. Here are some tips on symbols you'll be encountering: 
 				
-					<li> <i class="fa fa-arrow-circle-down" title="down"></i> means you can get more in depth information about a topic,</li>
-					<li> <i class="fa fa-arrow-circle-right" title="right"></i> takes you to the next step in the tutorial, </li>
-					<li> <i class="fa fa-fast-forward" title="fast-forward"></i> allows you to skip forward to the information you need. </li>
+					<i class="fa fa-arrow-circle-down" title="down"></i> means you can get more in depth information about a topic,
+					<i class="fa fa-arrow-circle-right" title="right"></i> takes you to the next step in the tutorial, 
+					<i class="fa fa-fast-forward" title="fast-forward"></i> allows you to skip forward to the information you need. 
 			
 			
 			<hr />
