--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -65,7 +65,7 @@
 		<!-- top level slide two: how to navigate -->
 		<section>
 			<h3>Navigating this Tutorial</h3>
-			<p> This is no average slideshow. Here are some tips on symbols you'll be encountering: </p>
+			<p> This is no average slideshow. You can click, swipe or use arrow keys to move around. Here are some tips on symbols you'll be encountering: </p>
 				
 			<p><i class="fa fa-arrow-circle-down" title="down"></i> means you can get more in depth information about a topic.</p>
 				<p><i class="fa fa-arrow-circle-right" title="right"></i> takes you to the next step in the tutorial. </p>
@@ -83,7 +83,7 @@
 			<p>Which path suits you?</p>
 			<p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> I don't know what Zotero is, tell me more.</p>
 			<p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> I'm ready to download Zotero!</p>
-			<p><a href="#/5"><i class="fa fa-fast-forward" title="fast-forward"></i></a> I already have Zotero... tell me how to use it.</p>
+			<p><a href="#/4"><i class="fa fa-fast-forward" title="fast-forward"></i></a> I already have Zotero... tell me how to use it.</p>
 			</section>
 			<section>
 				 <h3>Quick Video Tour of Zotero's Key Features</h3>
@@ -148,10 +148,10 @@
 						<h3>Saving Sources</h3>
 					<p>What kind of materials are you primarily going to be working with?</p>
 							<ul>
-					<li>	<a href="#/4/1"><i class="fa fa-book" title="books"></i></a> Books </li>
-				 <li> <a href="/4/2"> <i class="fa fa-file-text-o" title="articles"></i></a> Articles</li>
-					<li> <a href="/4/3"> <i class="fa fa-globe" title="website"></i></a> Websites</li>
-					<li> <a href="/4/4"> <i class="fa fa-twitter" title="social media"></i></a> Social Media</li>  
+								<li>	<a href="#/4/1"><i class="fa fa-book" title="books"></i> Books </a></li>
+								<li> <a href="#/4/2"> <i class="fa fa-file-text-o" title="articles"></i> Articles</a></li>
+								<li> <a href="#/4/3"> <i class="fa fa-globe" title="website"></i> Websites</a></li>
+								<li> <a href="#/4/4"> <i class="fa fa-twitter" title="social media"></i> Social Media</a></li>  
 							</ul>
 							<hr />
 							<p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> Going to be using all of them? Feel free to navigate down to experience all four.</p>
