more testing fast forward

--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -70,7 +70,7 @@
 			<p><i class="fa fa-arrow-circle-down" title="down"></i> means you can get more in depth information about a topic.</p>
 				<p><i class="fa fa-arrow-circle-right" title="right"></i> takes you to the next step in the tutorial. </p>
 				<p><i class="fa fa-fast-forward" title="fast-forward"></i> allows you to skip forward to the information you need. </p>
-				<p><span class="fa-stack"><i class="fa fa-circle"></i><i class="fa fa-fast-forward fa-inverse"></i></span> allows you to skip forward to the information you need.</p>
+				<p><span class="fa-stack fa-lg"><i class="fa fa-square"></i><i class="fa fa-fast-forward fa-inverse"></i></span> allows you to skip forward to the information you need.</p>
 			
 			
 			<hr />
