--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -67,9 +67,9 @@
 			<h3>Navigating this Tutorial</h3>
 			<p> This is no average slideshow. You can click, swipe or use arrow keys to move around. Here are some tips on symbols you'll be encountering: </p>
 				
-			<p><i class="fa fa-arrow-circle-down" title="down"></i> means you can get more in depth information about a topic.</p>
-				<p><i class="fa fa-arrow-circle-right" title="right"></i> takes you to the next step in the tutorial. </p>
-				<p><i class="fa fa-fast-forward" title="fast-forward"></i> allows you to skip forward to the information you need. </p>
+			<p><i class="fa fa-caret-down" title="down"></i> means you can get more in depth information about a topic.</p>
+				<p><i class="fa fa-caret-right" title="right"></i> takes you to the next step in the tutorial. </p>
+				<p><i class="fa fa-caret-right" title="fast-forward"></i><i class="fa fa-caret-right" title="fast-forward"></i> allows you to skip forward to the information you need. </p>
 			
 			
 			<hr />
@@ -83,7 +83,7 @@
 			<p>Which path suits you?</p>
 			<p><a href="#" class="navigate-down"><i class="fa fa-arrow-circle-down" title="down"></i></a> I don't know what Zotero is, tell me more.</p>
 			<p><a href="#" class="navigate-right"><i class="fa fa-arrow-circle-right" title="right"></i></a> I'm ready to download Zotero!</p>
-			<p><a href="#/4"><i class="fa fa-fast-forward" title="fast-forward"></i></a> I already have Zotero... tell me how to use it.</p>
+			<p><a href="#/4"><i class="fa angle-double-right" title="fast-forward"></i></a> I already have Zotero... tell me how to use it.</p>
 			</section>
 			<section>
 				 <h3>Quick Video Tour of Zotero's Key Features</h3>
