--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -256,7 +256,7 @@
                     
                       <section>
                             <h3>Taking Notes in Zotero</h3>
-                            <p>screenshots/screencast here</p>
+                            <iframe src="//giphy.com/embed/EY9DpOJlpiRaw" width="480" height="306" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
 												<hr />
 												<p><a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm done here!</p>      
 												<p><a href="#" class="navigate-down"><i class="fa fa-caret-down" title="down"></i></a> Show me how to import PDFs.</p>
