--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -256,7 +256,8 @@
                     
                       <section>
                             <h3>Taking Notes in Zotero</h3>
-                            <iframe src="https://ucla.box.com/s/h950ppbcehp756xvcvgqxs6bqtt0ujj2" width="480" allowFullScreen></iframe>
+                            <iframe width="480" height="306" src="https://ucla.box.com/s/h950ppbcehp756xvcvgqxs6bqtt0ujj2" frameborder="0" allowfullscreen></iframe>
+			      
 												<hr />
 												<p><a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm done here!</p>      
 												<p><a href="#" class="navigate-down"><i class="fa fa-caret-down" title="down"></i></a> Show me how to import PDFs.</p>
