--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -257,7 +257,7 @@
                       <section>
                             <h3>Taking Notes in Zotero</h3>
                            
-												<iframe width="480" height="306" src="http://i.imgur.com/HgAyEOA.gif" frameborder="0" allowfullscreen></iframe>
+												<img src="http://i.imgur.com/HgAyEOA.gif" title="Taking notes in Zotero" />
 			      
 												<hr />
 												<p><a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm done here!</p>      
