--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -271,6 +271,7 @@
                         
                         <section>
                             <h3>Importing PDFs into your Zotero Library</h3>
+				<iframe src="http://imgur.com/tJzKIXE" width="640" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
                             <p>If you already have a PDF of an article on your computer, you can add it to your collection by dragging it directly into Zotero.</p>
 							<p>You can even try to retrieve the key citation information directly from the PDF by right-clicking on it and choosing “Retreive Metadata for PDF.” Depending on how the PDF was created, Zotero may be able to collect this information for you!</p>
 													<hr />
