--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -270,9 +270,8 @@
                             <h3>Importing PDFs into your Zotero Library</h3>
 			<center><img width="640" height="360" src="http://i.imgur.com/TfBbwne.gif" frameborder="0" allowfullscreen></center>
 												
-                            <p>If you already have a PDF of an article on your computer, you can add it to your collection by dragging it directly into Zotero.</p>
-							<p>You can even try to retrieve the key citation information directly from the PDF by right-clicking on it and choosing “Retreive Metadata for PDF.” Depending on how the PDF was created, Zotero may be able to collect this information for you!</p>
-													<hr />
+                            <p>Drag files to add to your collection and extract metadata with ease!</p>
+																				<hr />
 							      <p><a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm done here!</p>
 													<p><a href="#" class="navigate-down"><i class="fa fa-caret-down" title="down"></i></a> I'm interested in additional resources.</p>
               
