--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -270,7 +270,7 @@
                             <h3>Importing PDFs into your Zotero Library</h3>
 			<center><img width="640" height="360" src="http://i.imgur.com/TfBbwne.gif" frameborder="0" allowfullscreen></center>
 												
-                            <p>Drag files to add to your collection and extract metadata with ease!</p>
+                            <p>Right click to extract metadata with ease!</p>
 																				<hr />
 							      <p><a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm done here!</p>
 													<p><a href="#" class="navigate-down"><i class="fa fa-caret-down" title="down"></i></a> I'm interested in additional resources.</p>
