--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -193,7 +193,7 @@
 						<h3>Organizing Your Sources</h3>
                         <i class="fa fa-video-camera" title="video"></i> video goes here
                         <hr />
-					<p> <a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm ready to create some citations.</p>
+					<p> <a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm ready to create bibliographies.</p>
 				</section>
 				
 					<!-- NOTE!!! gonna add this stuff back in later as we build out the presentation 
@@ -215,8 +215,8 @@
                 
 				<section>
 					<section>
-						<h3>Creating Citations and Bibliographies</h3>
-                        <i class="fa fa-video-camera" title="video"></i> video goes here
+						<h3>Creating Your Bibliography</h3>
+                        <center><img width="640" height="360" src="http://i.imgur.com/t8a4BuO.gif" frameborder="0" allowfullscreen></center>
                         <hr />
 				<p> <a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> Cool, got it. What else can Zotero do?</p>
 						<p>	<a href="#" class="navigate-down"><i class="fa fa-caret-down" title="down"></i></a> Want to cite directly in Word or Pages?</p>
