--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -162,7 +162,8 @@
 							</section>
 					 		<section>
 								<h3>Saving Books</h3>
-								<p> insert screencast here</p>
+                                <!-- this is a embedded video from box. To be replaced w/ YouTube version once published -->
+								<p><iframe src="https://app.box.com/embed/preview/do2pzjpac5pj35a5cg76j15e8h9cuwdz?direction=ASC&theme=dark" width="800" height="550" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen> </iframe></p>
 								<hr />
 						<p>How to cite: <a href="#/4/1">Books </a> | <a href="#/4/2">Articles</a> | <a href="#/4/3">Websites and more</a></p>
 			<p><a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm ready to organize my sources.</p>
