--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -268,7 +268,7 @@
                         
                         <section>
                             <h3>Importing PDFs into your Zotero Library</h3>
-			<center><img width="640" height="360" src="http://imgur.com/NnBn6Qb.gif" alt="Drag pdf file from your computer into Zotero's window to add to your Zotero folders. Right click on the pdf and select Retrieve Metadata from the drop down menu." frameborder="0" allowfullscreen></center>
+			<center><img width="640" height="360" src="http://i.imgur.com/NnBn6Qb.gif" alt="Drag pdf file from your computer into Zotero's window to add to your Zotero folders. Right click on the pdf and select Retrieve Metadata from the drop down menu." frameborder="0" allowfullscreen></center>
 												
                             <p>Right click to extract metadata with ease!</p>
 																				<hr />
