Added text to Organizing Sources GIF

--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -196,11 +196,13 @@
 						<h3>Organizing Your Sources</h3>
 							<table border="1">
 								<tr>
-									<td><center><img width="480" height="360" src="http://i.imgur.com/gXQUGsA.gif" alt="To create a new folder, click the new folder icon in the upper left hand corner and name the new folder. To add subcollections to the new folder, right click the folder in the left pane and click New subcollection. You can organize the items in your Zotero library by dragging and dropping them into their respective folders. To further organize your items, you can sort by title or author by clicking the arrow next to the Title or Creator heading in your library." frameborder="0" allowfullscreen></center></td>
+									<td><center><img width="480" height="360" src="http://i.imgur.com/gXQUGsA.gif" alt="To create a new folder, click the new folder icon in the upper left hand corner and name the new folder. To add subcollections to the new folder, right click the folder in the left panel and click New subcollection. You can organize the items in your Zotero library by dragging and dropping them into their respective folders. To further organize your items, you can sort by title or author by clicking the arrow next to the Title or Creator heading in your library." frameborder="0" allowfullscreen></center></td>
 									<td>
 										<ol>
-											<li>item 1</li>
-											<li>item 2</li>
+											<li>To create a new folder, click the new folder icon in the upper left hand corner and name the new folder.</li>
+											<li>To add subcollections to the new folder, rick click the folder in the left panel and click "New Subcollecton"</li>
+											<li>Organize the items in your Zotero library by dragging and dropping them into their respective folders.</li>
+											<li>To further organize your items, you can sort by title or author by clicking the arrow next to the "Title" or "Creator" heading in your library.</li>
 										</ol>
 									</td>
 								</tr>
