--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -199,8 +199,8 @@
 									<td><center><img width="480" height="360" src="http://i.imgur.com/gXQUGsA.gif" alt="To create a new folder, click the new folder icon in the upper left hand corner and name the new folder. To add subcollections to the new folder, right click the folder in the left panel and click New subcollection. You can organize the items in your Zotero library by dragging and dropping them into their respective folders. To further organize your items, you can sort by title or author by clicking the arrow next to the Title or Creator heading in your library." frameborder="0" allowfullscreen></center></td>
 									<td>
 										<ol>
-											<li>To create a new folder, click the new folder icon in the upper left hand corner and name the new folder.</li>
-											<li>To add subcollections to the new folder, rick click the folder in the left panel and click "New Subcollecton"</li>
+											<li>To create a new folder, click the new folder icon in the upper left hand corner and then name the new folder.</li>
+											<li>To add subcollections to the new folder, right click the folder in the left panel and click "New Subcollection."</li>
 											<li>Organize the items in your Zotero library by dragging and dropping them into their respective folders.</li>
 											<li>To further organize your items, you can sort by title or author by clicking the arrow next to the "Title" or "Creator" heading in your library.</li>
 										</ol>
@@ -234,7 +234,22 @@
 				<section>
 					<section>
 						<h3>Creating Your Bibliography</h3>
-                        <center><img width="480" height="360" src="http://i.imgur.com/PvGJ8Mr.gif" alt="Select the sources you wish to create a bibliography for by holding down control and clicking on each one. Right click your selection and select create bibliography. Pick your citation format and select bibliography as the output mode and copy to clipboard as the output method. Paste into a text editor or straight into your document" frameborder="0" allowfullscreen></center>
+							<table border="1">
+								<tr>
+									<td><center><img width="480" height="360" src="http://i.imgur.com/PvGJ8Mr.gif" alt="Select the sources you wish to create a bibliography for by holding down control and clicking on each one. Right click your selection and select create bibliography. Pick your citation format and select bibliography as the output mode and copy to clipboard as the output method. Paste into a text editor or straight into your document" frameborder="0" allowfullscreen></center></td>
+									<td>
+										<ol>
+											<li>Select the sources you wish to create a bibliography for by holding down the control key and clicking on each source.</li>
+											<li>Right click on your selection and select "Create Bibliography from Items."</li>
+											<li>Pick your citation format and select bibliography as the output, and then copy to the clipboard as the output method.</li>
+											<li>Paste into a text editor or directly into your document.</li>
+										</ol>
+									</td>
+								</tr>
+							</table>
+						
+						
+	
                         <hr />
 				<p> <a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> Cool, got it. What else can Zotero do?</p>
 				<!-- ADD BACK IN
