fixed taking notes gif

--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -297,7 +297,7 @@
                             <h3>Taking Notes in Zotero</h3>
 				     <table border="1">
 					     <tr>
-						     <td><center><img width="640" height="360" src="http://i.imgur.com/nC6G357.gif" alt="Click on the note icon in the top menu bar and select new standalone note. Write your note in the text entry panel." frameborder="0" allowfullscreen></center></td>
+						     <td><center><img width="640" height="360" src="http://i.imgur.com/tFxlyKw.gif" alt="Click on the note icon in the top menu bar and select new standalone note. Write your note in the text entry panel." frameborder="0" allowfullscreen></center></td>
 						     <td>
 							     <ol>
 								     <li>Click on the note icon in the top menu bar and select "New Standalone Note."</li>
