--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -359,8 +359,8 @@
 			
                 
                 <section>
-						<h3>You made it!</h3>
-                        <p>Assessment link here</p>                        
+						<h3>You made it! Please take this survey:</h3>
+                       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfgQwW2579LltGAH--Z3cy5Q3bHXzNu7qsNynnKJOmfenxHsA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>                        
                    	</section>
                 
 
