Undid adding width to Creating Bib GIF

--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -236,7 +236,7 @@
 						<h3>Creating Your Bibliography</h3>
 							<table border="1">
 								<tr>
-									<td width="80%"><center><img width="480" height="360" src="http://i.imgur.com/PvGJ8Mr.gif" alt="Select the sources you wish to create a bibliography for by holding down control and clicking on each one. Right click your selection and select create bibliography. Pick your citation format and select bibliography as the output mode and copy to clipboard as the output method. Paste into a text editor or straight into your document" frameborder="0" allowfullscreen></center></td>
+									<td><center><img width="480" height="360" src="http://i.imgur.com/PvGJ8Mr.gif" alt="Select the sources you wish to create a bibliography for by holding down control and clicking on each one. Right click your selection and select create bibliography. Pick your citation format and select bibliography as the output mode and copy to clipboard as the output method. Paste into a text editor or straight into your document" frameborder="0" allowfullscreen></center></td>
 									<td>
 										<ol>
 											<li>Select the sources you wish to create a bibliography for by holding down the control key and clicking on each source.</li>
