--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -269,7 +269,7 @@
 					     <tr>
 						     <td><center><img width="65%" src="http://i.imgur.com/tFxlyKw.gif" alt="Click on the note icon in the top menu bar and select new standalone note. Write your note in the text entry panel." frameborder="0" allowfullscreen></center></td>
 						     <td>
-							     <ol>
+							     <ol style="font-size: small;">
 								     <li>Click on the note icon in the top menu bar and select "New Standalone Note."</li>
 								     <li>Write your note in the text entry panel.</li>
 							     </ol>
