--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -65,7 +65,7 @@
 		<!-- top level slide two: how to navigate -->
 		<section>
 			<h3>Navigating this Tutorial</h3>
-			<p> This is no average slideshow. You can click, swipe or use arrow keys to move around. Here are some tips on symbols you'll be encountering: </p>
+			<p> This is no average slideshow. You can click, swipe or use arrow keys to move around. Here are some tips on navigating the tutorial: </p>
 				
 			<p><i class="fa fa-caret-down" title="down"></i> means you can get more in depth information about a topic.</p>
 				<p><i class="fa fa-caret-right" title="right"></i> takes you to the next step in the tutorial. </p>
