testing youtube embed

--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -162,9 +162,13 @@
 							</section>
 					 		<section>
 								<h3>Saving Books</h3>
-                                <!-- this is a embedded video from box. To be replaced w/ YouTube version once published -->
+								
+								<iframe width="1280" height="720" src="https://www.youtube.com/embed/0jCio5biXyg?rel=0" frameborder="0" allowfullscreen></iframe>
+								
+                                <!-- this is a embedded video from box. To be replaced w/ YouTube version once published
 								<iframe src="https://app.box.com/embed/preview/j4qdhy84j4kehzbbxcnbyze7ekj76avj?theme=dark" width="1080px" height="400px" frameborder="0" allowfullscreen webkitallowfullscreen msallowfullscreen></iframe>
-								<hr />
+						-->		
+						<hr />
 						<p>How to cite: <a href="#/4/1">Books </a> | <a href="#/4/2">Articles</a> | <a href="#/4/3">Websites and more</a></p>
 			<p><a href="#" class="navigate-right"><i class="fa fa-caret-right" title="right"></i></a> I'm ready to organize my sources.</p>
 					 </section>
