--- a/tutorial-zotero-intro.html
+++ b/tutorial-zotero-intro.html
@@ -16,7 +16,7 @@
 
 		<title>Intoduction to Zotero</title>
 
-		<meta name="description" content="An example / generic tutorial">
+		<meta name="description" content="Your quick introduction to Zotero">
 		<meta name="author" content="Author">
 
 		<meta name="apple-mobile-web-app-capable" content="yes">
