update concept map slides

--- a/concept-map.html
+++ b/concept-map.html
@@ -56,6 +56,12 @@
 				</section>
                 
                 <section>
+                    <img src="/files/creates/concept-map-1.png">
+                    <p>An example of a simple concept map.</p>
+                    <p style="font-size: 20px">Novak, J.D., &amp; Gowin, D.B. (1984). <i>Learning how to learn.</i> New York: Cambridge University Press.</p>
+                </section>
+                
+                <section>
 					<h2>1. Identify Key Concepts</h2>
 					<p align="left">
 						Identify key concepts from the introduction and list them. Some people find it helpful to write them on separate notecards so that they can be moved around.
